# CCCaster

./: .clang-format  .gitattributes  .gitignore  .gitmodules  ChangeLog.txt  Makefile  README.md  build.sh  config.sh  i686-w64-mingw32.txt  log.txt  meson.build  relay_list.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1_activation.yml
.github/workflows/: c-cpp debug.yml  c-cpp logging.yml  c-cpp release.yml  c-cpp.yml  codacy.yml  codeql.yml  dependency-review.yml  mirror.yml  scorecard.yml
addons/: a.h  build.sh  button_input.h  button_t.h  direction_input.h  direction_t.h  gameMode_t.h  game_mode.h  misc.h  player_t.h
addons/actual_addon/: Makefile  \  actual_addon.def  build.sh  info.hjson  tags
addons/actual_addon/src/: main.c  main.cpp
addons/example/: Makefile  build.sh  example.c  example.cpp  example.def  info.hjson
addons/joystick_addon/: Makefile  build.sh  controls_backup.json  info.hjson  joystick.def
addons/joystick_addon/src/: main.cpp
addons/keyboard_addon/: 1keyboard.def  Makefile  build.sh  controls_backup.json  h  info.hjson  keyboard.def  keyboard_addon.def
addons/keyboard_addon/a/: controls_backup.json  info.hjson  meson.build
addons/keyboard_addon/a/addon_callbacks/include/: addon_callbacks.hpp
addons/keyboard_addon/a/addon_callbacks/src/: addon_callbacks.cpp
addons/keyboard_addon/a/src/: main.cpp
addons/keyboard_addon/src/: main.cpp
addons/log/: .clang-format  Makefile  build.sh  info.hjson  log.def
addons/log/src/: main.c
addons/netplay_addon/: Makefile  build.sh  controls_backup.json  info.hjson  netplay.def  tags
addons/netplay_addon/src/: main.cpp
addons/overlay_addon/: Makefile  build.sh  info.hjson  overlay.def
addons/overlay_addon/src/: main.cpp
d3d9-wrapper/: IDirect3D9Ex.exp  IDirect3D9Ex.lib  Makefile  build.sh  d3d9.def  d3d9.spec
d3d9-wrapper/D3DPERF_BeginEvent/include/: D3DPERF_BeginEvent.h
d3d9-wrapper/D3DPERF_BeginEvent/src/: D3DPERF_BeginEvent.c
d3d9-wrapper/D3DPERF_BeginEventProc/include/: D3DPERF_BeginEventProc.h
d3d9-wrapper/D3DPERF_BeginEventProc/src/: D3DPERF_BeginEventProc.c
d3d9-wrapper/D3DPERF_EndEvent/include/: D3DPERF_EndEvent.h
d3d9-wrapper/D3DPERF_EndEvent/src/: D3DPERF_EndEvent.c
d3d9-wrapper/D3DPERF_EndEventProc/include/: D3DPERF_EndEventProc.h
d3d9-wrapper/D3DPERF_EndEventProc/src/: D3DPERF_EndEventProc.c
d3d9-wrapper/D3DPERF_GetStatus/include/: D3DPERF_GetStatus.h
d3d9-wrapper/source/: IDirect3D9Ex.cpp  IDirect3DCubeTexture9.h  IDirect3DDevice9Ex.h  IDirect3DIndexBuffer9.h  IDirect3DPixelShader9.h  IDirect3DTexture9.cpp  IDirect3DTexture9.h  IDirect3DVertexBuffer9.cpp  IDirect3DVertexBuffer9.h  IDirect3DVertexShader9.cpp  IDirect3DVolume9.h  IDirect3DVolumeTexture9.h  d3d9.h
d3d9-wrapper/src/: AddressLookupTable.h  IDirect3D9Ex.cpp  IDirect3D9Ex.h  IDirect3DCubeTexture9.cpp  IDirect3DCubeTexture9.h  IDirect3DDevice9Ex.cpp  IDirect3DDevice9Ex.h  IDirect3DIndexBuffer9.cpp  IDirect3DIndexBuffer9.h  IDirect3DPixelShader9.cpp  IDirect3DPixelShader9.h  IDirect3DQuery9.cpp  IDirect3DQuery9.h  IDirect3DStateBlock9.cpp  IDirect3DStateBlock9.h  IDirect3DSurface9.cpp  IDirect3DSurface9.h  IDirect3DSwapChain9Ex.cpp  IDirect3DSwapChain9Ex.h  IDirect3DTexture9.cpp  IDirect3DTexture9.h  IDirect3DVertexBuffer9.cpp  IDirect3DVertexBuffer9.h  IDirect3DVertexDeclaration9.cpp  IDirect3DVertexDeclaration9.h  IDirect3DVertexShader9.cpp  IDirect3DVertexShader9.h  IDirect3DVolume9.cpp  IDirect3DVolume9.h  IDirect3DVolumeTexture9.cpp  IDirect3DVolumeTexture9.h  InterfaceQuery.cpp  InterfaceQuery.h  a.out  d3d9.h  helpers.h  iathook.h  main.c  main.cpp  main.cpp.bak
imgui/: imconfig.h
json_file/: build.sh
json_file/include/: json_file.hpp
json_file/src/: json_file.cpp
just_another_modloader/: Cargo.toml  build_debug.sh  build_release.sh
just_another_modloader/src/: lib.rs
lib/: .gitignore  Algorithms.hpp  BlockingQueue.hpp  ChangeMonitor.cpp  ChangeMonitor.hpp  Compression.cpp  Compression.hpp  ConsoleUi.cpp  ConsoleUi.hpp  Controller.cpp  Controller.hpp  ControllerManager.cpp  ControllerManager.hpp  Enum.hpp  ErrorStrings.hpp  EventManager.cpp  EventManager.hpp  Exceptions.cpp  Exceptions.hpp  ExternalIpAddress.cpp  ExternalIpAddress.hpp  GoBackN.cpp  GoBackN.hpp  Guid.cpp  Guid.hpp  HttpDownload.cpp  HttpDownload.hpp  HttpGet.cpp  HttpGet.hpp  IpAddrPort.cpp  IpAddrPort.hpp  JoystickDetector.cpp  JoystickDetector.hpp  KeyValueStore.cpp  KeyValueStore.hpp  KeyboardManager.cpp  KeyboardManager.hpp  KeyboardState.cpp  KeyboardState.hpp  Lobby.cpp  (+39 more)
minhook/include/: minhook.h
netplay/: CharacterSelect.hpp  Constants.hpp  ErrorStringsExt.hpp  InputsContainer.hpp  Messages.hpp  NetplayStates.hpp  Options.hpp  PaletteManager.cpp  PaletteManager.hpp  ProcessManager.cpp  ProcessManager.hpp  ReplayCreator.cpp  ReplayCreator.hpp  ReplayManager.cpp  ReplayManager.hpp  SpectatorManager.cpp  SpectatorManager.hpp
scripts/: lobbyserver.py  make_depend  rand.py  server.py
sequences/: H-Ryougi.hpp  seqcsv2hpp.py
src/: get_active_window.cpp  main.cpp
states_dll/: .gitmodules  Makefile  build.sh  states.def  states.spec
states_dll/include/: bytell_hash_map.hpp  flat_hash_map.hpp
states_dll/src/: main.cpp
stdfunc/: build.sh
stdfunc/include/: stdfunc.h
stdfunc/src/: a.out  e.c  stdfunc.c
targets/: DllAsmHacks.cpp  DllControllerManager.cpp  DllControllerManager.hpp  DllControllerUtils.hpp  DllFrameRate.cpp  DllFrameRate.hpp  DllHacks.cpp  DllHacks.hpp  DllMain.cpp  DllNetplayManager.cpp  DllNetplayManager.hpp  DllOverlayPrimitives.hpp  DllOverlayUi.cpp  DllOverlayUi.hpp  DllOverlayUiImGui.cpp  DllOverlayUiText.cpp  DllPaletteManager.cpp  DllProcessManager.cpp  DllRollbackManager.cpp  DllRollbackManager.hpp  DllSpectatorManager.cpp  DllTrialManager.cpp  DllTrialManager.hpp  Main.cpp  Main.hpp  MainApp.cpp  MainUi.cpp  MainUi.hpp  MainUpdater.cpp  MainUpdater.hpp
tests/: Test.GoBackN.cpp  Test.Socket.hpp  Test.TcpSocket.cpp  Test.Timer.cpp  Test.UdpSocket.cpp  Test.cpp  Test.hpp
tools/: Debugger.cpp  Launcher.cpp  PaletteEditor.cpp  Palettes.cpp  Updater.cpp
(+126 files in other folders)
